fixed css spacing issue

--- a/src/_scss/pages/covid19/index.scss
+++ b/src/_scss/pages/covid19/index.scss
@@ -257,10 +257,15 @@
                 }
             }
             .body__section:first-of-type {
-              padding: 0;
+                padding: 0;
             }
 
             .body__section:nth-child(4) {
+                padding: 0;
+            }
+
+            .body__section:nth-last-child(2) {
+                margin-bottom: 0;
                 padding: 0;
             }
 
